--- a/Lab03/Lab03/Lab 2.vcxproj
+++ b/Lab03/Lab03/Lab 2.vcxproj
@@ -32,6 +32,9 @@
     <ClInclude Include="include\treebuilder.h" />
     <ClInclude Include="include\vertex.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E161AD21-A6AD-4FE3-90AA-CF6551D0D9A1}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
